--- a/css/css-lecture.css
+++ b/css/css-lecture.css
@@ -12,8 +12,8 @@ selector {
 }
  */
 html {
-    background-color: #91bf74;
+    background-color: orange;
 }
 h1, h2 {
-    color: aquamarine;
+    color: blue;
 }
