--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 body {
-    background-color: lightskyblue;
+    background-color: lightpink;
 }
 h1 {
-    color: darkmagenta;
+    color: black;
 }
 #core-values li {
-    color: darkblue;
+    color: gray;
 }
