--- a/css/selectors.css
+++ b/css/selectors.css
@@ -9,7 +9,7 @@
     that are a descendent of id="container"
     and have a class of "fancy-header" */
 #container h1 {
-    color: blue;
+    color: red;
     text-decoration: underline;
 }
 
